--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
     <html lang="en">
     <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="mystyle.css" />
+    <style type="text/css">
+        a:link {color:azure;}      /* 未访问链接*/
+        a:visited {color:azure;}  /* 已访问链接 */
+        a:hover {color:rgb(138, 189, 189);}  /* 鼠标移动到链接上 */
+        a:active {color:azure;}  /* 鼠标点击时 */
+        .n{ TEXT-DECORATION:none }
+    </style>
 </head>
 <body>
     <div id="box" >
-        Hello! 👏
+        <a class=n href="https://www.youtube.com">Hello! 👏</a> 
     </div>
 </body>
 </html>
