--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style type="text/css">
         a:link {color:azure;}      /* 未访问链接*/
         a:visited {color:azure;}  /* 已访问链接 */
-        a:hover {color:rgb(226, 233, 190);}  /* 鼠标移动到链接上 */
+        a:hover {color:rgb(226, 233, 190);background-color:yellow;}  /* 鼠标移动到链接上 */
         a:active {color:azure;}  /* 鼠标点击时 */
         .n{ TEXT-DECORATION:none }
     </style>
